# Pake

./: Cargo.toml
.github/workflows/: single-app.yaml
