[package]
name = "vulnerable-rust-demo"
version = "0.1.0"
edition = "2021"

[dependencies]

# =========================
# Web / HTTP
# =========================
actix-web = "3.3.2"
hyper = "0.13.0"
warp = "0.2.5"
reqwest = "0.11.0"

# =========================
# Async / Runtime
# =========================
tokio = "1.0.1"
async-std = "1.6.0"
futures = "0.3.5"

# =========================
# Serialization
# =========================
serde = "1.0.114"
serde_json = "1.0.57"
serde_yaml = "0.8.13"
bincode = "1.2.1"

# =========================
# Crypto / TLS
# =========================
openssl = "0.10.30"
native-tls = "0.2.3"
rustls = "0.18.1"
jsonwebtoken = "7.2.0"
ring = "0.16.12"

# =========================
# Compression / Archive
# =========================
tar = "0.4.26"
zip = "0.5.6"
flate2 = "1.0.14"

# =========================
# Parsing / Regex
# =========================
regex = "1.3.0"
nom = "5.1.1"

# =========================
# Date / Time
# =========================
chrono = "0.4.19"
time = "0.1.43"

# =========================
# UUID / Random
# =========================
uuid = "0.8.1"
rand = "0.7.3"

# =========================
# Database
# =========================
rusqlite = "0.24.2"
diesel = "1.4.5"
mongodb = "1.1.1"

# =========================
# CLI / Terminal
# =========================
clap = "2.33.3"
structopt = "0.3.15"

# =========================
# Filesystem / Utilities
# =========================
tempfile = "3.1.0"
walkdir = "2.3.1"

# =========================
# Networking
# =========================
tokio-tungstenite = "0.11.0"
tungstenite = "0.11.1"

# =========================
# XML / HTML
# =========================
quick-xml = "0.18.1"
xml-rs = "0.8.3"

# =========================
# Image Processing
# =========================
image = "0.23.8"

# =========================
# Logging
# =========================
log = "0.4.11"
env_logger = "0.7.1"

# =========================
# Misc
# =========================
smallvec = "1.4.1"
bytes = "0.5.4"
crossbeam = "0.7.3"
